coral-component-taglist/src/styles/index.styl
/**
 * Copyright 2019 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

@require '@adobe/spectrum-css/dist/components/tags/index.css';
@require '@adobe/spectrum-css/dist/components/tags/index-diff.css';
@require '@adobe/spectrum-css/dist/components/tags/multiStops/light.css';
@require '@adobe/spectrum-css/dist/components/tags/multiStops/lightest.css';
@require '@adobe/spectrum-css/dist/components/tags/multiStops/dark.css';
@require '@adobe/spectrum-css/dist/components/tags/multiStops/darkest.css';

@require '@adobe/spectrum-css/dist/components/label/index.css';
@require '@adobe/spectrum-css/dist/components/label/index-diff.css';
@require '@adobe/spectrum-css/dist/components/label/multiStops/light.css';
@require '@adobe/spectrum-css/dist/components/label/multiStops/lightest.css';
@require '@adobe/spectrum-css/dist/components/label/multiStops/dark.css';
@require '@adobe/spectrum-css/dist/components/label/multiStops/darkest.css';

@require '../../../coral-theme-spectrum/src/styles/vars.css';

// Support multiline
._coral-Tags-item--multiline {
  height: auto;
}

// @spectrum
._coral-Label {
  margin: calc(var(--spectrum-medium-taggroup-tag-gap-x) / 2);
}

@require 'light';
@require 'lightest';
@require 'dark';
@require 'darkest';

